--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,13 +18,13 @@
 
         <EditText
             android:id="@+id/edit_user"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="用户名：" />
 
         <EditText
             android:id="@+id/edit_password"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="密码：" />
 
@@ -50,25 +50,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
+        <TextView
             android:id="@+id/btn_register"
             android:layout_width="60dp"
             android:layout_height="20dp"
-            android:background="@android:color/transparent"
+            android:gravity="center"
             android:text="创建账号"
-            android:textSize="11dp" /><!--透明得背景-->
+            android:textSize="12dp" />
 
-        <Button
+        <View
+            android:layout_width="1dp"
+            android:layout_height="10dp"
+            android:background="@android:color/darker_gray"/>
+
+        <TextView
             android:id="@+id/btn_forget"
             android:layout_width="60dp"
             android:layout_height="20dp"
-            android:background="@android:color/transparent"
+            android:gravity="center"
             android:text="忘记密码"
-            android:textSize="11dp" />
+            android:textSize="12dp" />
 
     </LinearLayout>
 
