--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/edit_mail"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Mail" />
+
+    <EditText
+        android:id="@+id/edit_user_register"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="User" />
+
+    <EditText
+        android:id="@+id/edit_age"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Age" />
+
+
+    <RadioGroup
+        android:id="@+id/mRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rb_male"
+            android:layout_marginRight="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="male"/>
+
+        <RadioButton
+            android:id="@+id/rb_female"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="female"/>
+
+    </RadioGroup>
+
+
+
+    <EditText
+        android:id="@+id/edit_password_register"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Password" />
+
+    <EditText
+        android:id="@+id/et_pass_verify"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Password" />
+
+
+    <EditText
+        android:id="@+id/et_desc"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:hint="简介" />
+
+
+    <Button
+        android:id="@+id/btn_register_accomplish"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_bg"
+        android:text="创建账号"
+        android:textColor="@android:color/white"
+        android:textSize="25dp" />
+
 
 </LinearLayout>
