实现更改/重置密码

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
             android:background="@android:color/darker_gray"/>
 
         <TextView
-            android:id="@+id/btn_forget"
+            android:id="@+id/tv_forget"
             android:layout_width="60dp"
             android:layout_height="20dp"
             android:gravity="center"
