--- a/app/src/main/res/layout/activity_courier.xml
+++ b/app/src/main/res/layout/activity_courier.xml
@@ -10,14 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="快递公司"
-        android:text="百世快递" />
+        android:text="sto" />
 
     <EditText
         android:id="@+id/et_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="快递单号"
-        android:text="5520006056645618" />
+        android:text="3715839972615" />
 
     <Button
         android:id="@+id/btn_refer"
