归属地查询---自定义键盘逻辑开发

--- a/app/src/main/res/layout/activity_courier.xml
+++ b/app/src/main/res/layout/activity_courier.xml
@@ -30,6 +30,7 @@
         android:textSize="20dp" />
 
     <ListView
+        android:scrollbars="none"
         android:id="@+id/lv_listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
