--- a/app/src/main/res/layout/wechat_item.xml
+++ b/app/src/main/res/layout/wechat_item.xml
@@ -2,36 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="0dp">
 
     <ImageView
+        android:layout_marginLeft="10dp"
         android:id="@+id/iv_wechat_img"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/demo_bg" />
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:maxLines="1"
             android:text="在山的那边海的那边有一群蓝精灵"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_source"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="bottom|right"
             android:text="人民日报" />
 
     </LinearLayout>
