女孩图片---数据解析与图片加载

--- a/app/src/main/res/layout/fragment_girl.xml
+++ b/app/src/main/res/layout/fragment_girl.xml
@@ -6,10 +6,11 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/beauty_community"
-        android:textSize="30dp"/>
+    <GridView
+        android:id="@+id/mGridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"/>
+
 
 </LinearLayout>
