--- a/app/src/main/res/layout/fragment_butler.xml
+++ b/app/src/main/res/layout/fragment_butler.xml
@@ -19,24 +19,19 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_left"
+        <EditText
+            android:id="@+id/et_chat_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/button_bg_2"
-            android:text="left"
-            android:textColor="@android:color/white"
-            android:textSize="20dp" />
+            android:hint="输入" />
 
         <Button
-            android:id="@+id/btn_right"
-            android:layout_width="0dp"
+            android:id="@+id/btn_sent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@drawable/button_bg_2"
-            android:text="right"
+            android:text="发送"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
 
