--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -22,18 +22,18 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/siber"
+                    android:layout_centerInParent="true"
                     android:scaleType="centerCrop"
-                    android:layout_centerInParent="true"/>
+                    android:src="@drawable/siber" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_image"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
+                    android:layout_centerInParent="true"
                     android:src="@drawable/head_portrait"
-                    app:civ_border_width="2dp"
                     app:civ_border_color="@android:color/white"
-                    android:layout_centerInParent="true"/>
+                    app:civ_border_width="2dp" />
 
             </RelativeLayout>
 
@@ -114,7 +114,6 @@
             </LinearLayout>
 
 
-
             <TextView
                 android:id="@+id/tb_courier"
                 android:layout_width="match_parent"
@@ -153,10 +152,10 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:textSize="20dp"
                 android:background="@drawable/button_bg"
                 android:text="退出登录"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
