--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,9 +13,9 @@
 
         <ImageView
             android:id="@+id/iv_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/head" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -39,17 +40,18 @@
                 android:id="@+id/et_password"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:hint="密码：" />
+                android:hint="密码："
+                android:inputType="textPassword" />
 
         </android.support.design.widget.TextInputLayout>
 
-            <CheckBox
-                android:id="@+id/cb_remember_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="记住密码"
-                android:textSize="11dp"/>
+        <CheckBox
+            android:id="@+id/cb_remember_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="记住密码"
+            android:textSize="11dp" />
 
 
         <Button
@@ -65,8 +67,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -81,7 +83,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="10dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/tv_forget"
